--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="portfolio-item">
-                        <img src="assets/portfolio-1.jpeg" alt="Portfolio Item" class="img-fluid">
+                        <img src="assets/portfolio-6.png" alt="Portfolio Item" class="img-fluid">
                         <div class="portfolio-overlay text-center px-3">
                             <h4 class="text-white mb-3">Cosmetic Product</h4>
                             <p class="text-white mb-4">High-end beauty product rendering for print ad campaign</p>
@@ -369,7 +369,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="portfolio-item">
-                        <img src="assets/portfolio-2.jpg" alt="Portfolio Item" class="img-fluid">
+                        <img src="assets/portfolio-7.png" alt="Portfolio Item" class="img-fluid">
                         <div class="portfolio-overlay text-center px-3">
                             <h4 class="text-white mb-3">Electronics</h4>
                             <p class="text-white mb-4">Smartphone model for e-commerce product page</p>
@@ -379,7 +379,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="portfolio-item">
-                        <img src="assets/portfolio-5.jpg" alt="Portfolio Item" class="img-fluid">
+                        <img src="assets/portfolio-8.png" alt="Portfolio Item" class="img-fluid">
                         <div class="portfolio-overlay text-center px-3">
                             <h4 class="text-white mb-3">Packaging</h4>
                             <p class="text-white mb-4">Beverage bottle and label design visualization</p>
@@ -389,7 +389,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="portfolio-item">
-                        <img src="assets/portfolio-5.jpg" alt="Portfolio Item" class="img-fluid">
+                        <img src="assets/portfolio-9.png" alt="Portfolio Item" class="img-fluid">
                         <div class="portfolio-overlay text-center px-3">
                             <h4 class="text-white mb-3">Furniture</h4>
                             <p class="text-white mb-4">Modern chair design for catalog and website</p>
@@ -399,7 +399,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="portfolio-item">
-                        <img src="assets/portfolio-2.jpg" alt="Portfolio Item" class="img-fluid">
+                        <img src="assets/portfolio-10.png" alt="Portfolio Item" class="img-fluid">
                         <div class="portfolio-overlay text-center px-3">
                             <h4 class="text-white mb-3">Automotive</h4>
                             <p class="text-white mb-4">Car accessory visualization for marketing materials</p>
@@ -409,7 +409,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="portfolio-item">
-                        <img src="assets/portfolio-1.jpeg" alt="Portfolio Item" class="img-fluid">
+                        <img src="assets/portfolio-11.png" alt="Portfolio Item" class="img-fluid">
                         <div class="portfolio-overlay text-center px-3">
                             <h4 class="text-white mb-3">Jewelry</h4>
                             <p class="text-white mb-4">Luxury watch rendering for advertisement</p>
@@ -526,141 +526,141 @@
         </div>
     </section>
 
-    <!-- Testimonials Section -->
-    <section id="testimonials" class="py-5 rel z-1">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
-                    <h2 class="section-title">Client Testimonials</h2>
-                    <p class="lead mb-5">What my clients say about my 3D modeling and visualization services.</p>
+        <!-- Testimonials Section -->
+        <section id="testimonials" class="py-5 rel z-1">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="section-title">Client Testimonials</h2>
+                        <p class="lead mb-5">What my clients say about my 3D modeling and visualization services.</p>
+                    </div>
+                </div>
+                <div class="row horizontal-track">
+                    <div class="col-md-4 mb-4">
+                        <div class="card border-0 shadow-sm h-100">
+                            <div class="card-body p-4">
+                                <div class="d-flex align-items-center mb-4">
+                                    <!-- <img src="testimonial1.jpg" alt="Client" class="rounded-circle me-3"> -->
+                                    <div>
+                                        <h5 class="mb-0">Sarah Johnson</h5>
+                                        <p class="text-muted mb-0">Marketing Director, BeautyCo</p>
+                                    </div>
+                                </div>
+                                <p class="text-muted">"The 3D renders of our new skincare line were absolutely stunning.
+                                    They perfectly captured the premium quality of our products and were instrumental in our
+                                    successful product launch campaign."</p>
+                                <div style="color: var(--primary);">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="circles-wrap">
+                                    <div class="circles">
+                                        <div class="circle circle-1">
+
+                                        </div>
+                                        <div class="circle circle-2">
+
+                                        </div>
+
+                                        <div class="circle circle-3">
+
+                                        </div>
+                                        <div class="circle circle-4">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card border-0 shadow-sm h-100">
+                            <div class="card-body p-4 active">
+                                <div class="d-flex align-items-center mb-4">
+                                    <!-- <img src="testimonial1.jpg" alt="Client" class="rounded-circle me-3"> -->
+                                    <div>
+                                        <h5 class="mb-0">Michael Chen</h5>
+                                        <p class="text-muted mb-0">Product Manager, TechGadgets</p>
+                                    </div>
+                                </div>
+                                <p class="text-muted">"We needed high-quality 3D models of our new device for our website
+                                    before the physical product was ready. The models were so accurate that customers
+                                    couldn't tell they weren't photographs."</p>
+                                <div style="color: var(--primary);">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="circles-wrap">
+                                    <div class="circles">
+                                        <div class="circle circle-1">
+
+                                        </div>
+                                        <div class="circle circle-2">
+
+                                        </div>
+                                        <div class="circle circle-3">
+
+                                        </div>
+                                        <div class="circle circle-4">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card border-0 shadow-sm h-100">
+                            <div class="card-body p-4">
+                                <div class="d-flex align-items-center mb-4">
+                                    <!-- <img src="testimonial1.jpg" alt="Client" class="rounded-circle me-3"> -->
+                                    <div>
+                                        <h5 class="mb-0">David Wilson</h5>
+                                        <p class="text-muted mb-0">Creative Director, AdAgency</p>
+                                    </div>
+                                </div>
+                                <p class="text-muted">"Working with this artist on our automotive client's campaign was a
+                                    pleasure. The attention to detail in the models and the ability to make quick revisions
+                                    saved us time and budget."</p>
+                                <div style="color: var(--primary);">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star-half-alt"></i>
+                                </div>
+                                <div class="circles-wrap">
+                                    <div class="circles">
+                                        <div class="circle circle-1">
+
+                                        </div>
+                                        <div class="circle circle-2">
+
+                                        </div>
+                                        <div class="circle circle-3">
+
+                                        </div>
+
+                                        <div class="circle circle-4">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="card-body p-4">
-                            <div class="d-flex align-items-center mb-4">
-                                <!-- <img src="testimonial1.jpg" alt="Client" class="rounded-circle me-3"> -->
-                                <div>
-                                    <h5 class="mb-0">Sarah Johnson</h5>
-                                    <p class="text-muted mb-0">Marketing Director, BeautyCo</p>
-                                </div>
-                            </div>
-                            <p class="text-muted">"The 3D renders of our new skincare line were absolutely stunning.
-                                They perfectly captured the premium quality of our products and were instrumental in our
-                                successful product launch campaign."</p>
-                            <div style="color: var(--primary);">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <div class="circles-wrap">
-                                <div class="circles">
-                                    <div class="circle circle-1">
-
-                                    </div>
-                                    <div class="circle circle-2">
-
-                                    </div>
-
-                                    <div class="circle circle-3">
-
-                                    </div>
-                                    <div class="circle circle-4">
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="card-body p-4 active">
-                            <div class="d-flex align-items-center mb-4">
-                                <!-- <img src="testimonial1.jpg" alt="Client" class="rounded-circle me-3"> -->
-                                <div>
-                                    <h5 class="mb-0">Michael Chen</h5>
-                                    <p class="text-muted mb-0">Product Manager, TechGadgets</p>
-                                </div>
-                            </div>
-                            <p class="text-muted">"We needed high-quality 3D models of our new device for our website
-                                before the physical product was ready. The models were so accurate that customers
-                                couldn't tell they weren't photographs."</p>
-                            <div style="color: var(--primary);">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <div class="circles-wrap">
-                                <div class="circles">
-                                    <div class="circle circle-1">
-
-                                    </div>
-                                    <div class="circle circle-2">
-
-                                    </div>
-                                    <div class="circle circle-3">
-
-                                    </div>
-                                    <div class="circle circle-4">
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card border-0 shadow-sm h-100">
-                        <div class="card-body p-4">
-                            <div class="d-flex align-items-center mb-4">
-                                <!-- <img src="testimonial1.jpg" alt="Client" class="rounded-circle me-3"> -->
-                                <div>
-                                    <h5 class="mb-0">David Wilson</h5>
-                                    <p class="text-muted mb-0">Creative Director, AdAgency</p>
-                                </div>
-                            </div>
-                            <p class="text-muted">"Working with this artist on our automotive client's campaign was a
-                                pleasure. The attention to detail in the models and the ability to make quick revisions
-                                saved us time and budget."</p>
-                            <div style="color: var(--primary);">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                            </div>
-                            <div class="circles-wrap">
-                                <div class="circles">
-                                    <div class="circle circle-1">
-
-                                    </div>
-                                    <div class="circle circle-2">
-
-                                    </div>
-                                    <div class="circle circle-3">
-
-                                    </div>
-
-                                    <div class="circle circle-4">
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="bg-lines">
+                <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
             </div>
-        </div>
-        <div class="bg-lines">
-            <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
-        </div>
-    </section>
+        </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section py-5">
